--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baseurl: /
 url: https://linusaarnio.github.io
 twitter_username: 
 github_username: linusaarnio
-minimal_mistakes_skin: default
+minimal_mistakes_skin: mint
 search: true
 
 # Build settings
