--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: linaa722@student.liu.se
 description: >- # this means to ignore newlines until "baseurl:"
   Personal site for Linus Aarnio.
 baseurl: /
-url: https://linusaarnio.github.io
+url: https://linusaarnio.com
 twitter_username: 
 github_username: linusaarnio
 minimal_mistakes_skin: dark
